# python-demo

./: requirements_dev.txt  setup.cfg
.github/workflows/: tests.yml
