[metadata]
name = slapping
description = slap that like button
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    slapping
install_requires =
    requests
python_requires
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest-cov
    flake8

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160